--- a/package.json
+++ b/package.json
@@ -9,18 +9,27 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.7.1",
+    "@tanstack/react-query-devtools": "^4.7.1",
+    "axios": "^1.6.8",
     "bootstrap": "5.2.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.6.0",
-    "react-markdown": "^8.0.3",
-    "react-router-dom": "^6.4.2"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-icons": "4.6.0",
+    "react-markdown": "8.0.3",
+    "react-router-dom": "6.4.2"
   },
   "devDependencies": {
-    "@types/react": "^18.0.22",
-    "@types/react-dom": "^18.0.7",
-    "@vitejs/plugin-react": "^2.2.0",
-    "typescript": "^4.6.4",
-    "vite": "^3.2.0"
+    "@types/react": "18.0.22",
+    "@types/react-dom": "18.0.7",
+    "@vitejs/plugin-react": "2.2.0",
+    "typescript": "4.6.4",
+    "vite": "3.2.0"
+  },
+  "pnpm": {
+    "overrides": {
+      "vite@>=3.0.2 <3.2.7": ">=3.2.7",
+      "vite@>=3.0.0 <=3.2.7": ">=3.2.8"
+    }
   }
 }
