--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query-devtools": "^4.7.1",
     "axios": "^1.6.8",
     "bootstrap": "5.2.2",
+    "dotenv": "^16.4.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "4.6.0",
